# binip

./: .gitignore  Cargo.toml  audit.md  perf.data  perf.data.old
crates/bench/: Cargo.toml
crates/bench/benches/: e2e_bench.rs
crates/bench/src/: profile.rs  profile_cpu.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: bytecode_lookup.rs  constraint.rs  decomp.rs  encoder.rs  lib.rs  lookup.rs  mpt.rs  state_constraint.rs  trace.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: inspector.rs  lib.rs  witness.rs
crates/evm-types/: Cargo.toml
crates/evm-types/src/: consistency.rs  lib.rs  opcode.rs  proof_tree.rs  state.rs  type_check.rs
crates/field/: Cargo.toml
crates/field/src/: gf2_128.rs  gf2_32.rs  gf2_64.rs  lib.rs  traits.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: buffer.rs  context.rs  error.rs  lib.rs  pipeline.rs  shaders.rs
crates/gpu/src/shaders/: gf128.wgsl
crates/logup/: Cargo.toml
crates/logup/src/: lib.rs  proof.rs  prover.rs  table.rs  verifier.rs
crates/lut/: Cargo.toml
crates/lut/src/: lib.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: code.rs  eq.rs  gpu_ops.rs  lib.rs  merkle.rs
crates/pcs/src/shaders/: batch_row_rlc.wgsl  matrix_encode.wgsl  merkle_leaf_hash.wgsl
crates/poly/: Cargo.toml
crates/poly/src/: gpu_ops.rs  lib.rs  poly.rs
crates/poly/src/shaders/: batch_ops.wgsl  eq.wgsl  mle.wgsl  reduce.wgsl
crates/recursive/: Cargo.toml
crates/recursive/src/: circuit.rs  lib.rs  proof.rs  prover.rs  verifier.rs
crates/shard/: Cargo.toml
crates/shard/src/: config.rs  lib.rs  proof.rs  prover.rs  verifier.rs
crates/stark/: Cargo.toml
crates/stark/src/: compress.rs  lib.rs  proof.rs  prover.rs  verifier.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: gpu_prover.rs  lib.rs  proof.rs  prover.rs  shard_gpu_prover.rs  verifier.rs
crates/sumcheck/src/shaders/: shard.wgsl  sumcheck.wgsl
crates/transcript/: Cargo.toml
crates/transcript/src/: blake3_transcript.rs  ghash_field.rs  lib.rs  sponge.rs  transcript.rs  vision4.rs  vision4_circuit.rs
crates/vm/: Cargo.toml
crates/vm/src/: advice.rs  compile.rs  exec.rs  isa.rs  lib.rs  reg.rs  row.rs  schedule.rs
plans/: V1.1.md  V1.md
