[workspace]
resolver = "3"
members = ["crates/vm", "crates/evm-types", "crates/field", "crates/poly", "crates/transcript", "crates/sumcheck", "crates/pcs", "crates/circuit", "crates/logup", "crates/lut", "crates/shard", "crates/recursive", "crates/stark", "crates/e2e", "crates/bench"]

[workspace.dependencies]
bytemuck  = { version = "1", features = ["derive"] }
thiserror = "2"
blake3    = "1"
serde     = { version = "1", features = ["derive"] }
bincode   = "2"
rand      = "0.9"
zeroize   = "1"
revm      = "34"

[profile.release]
debug = true
