[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "e2e_bench"
harness = false

[[bin]]
name = "profile"
path = "src/profile.rs"

[dependencies]
e2e        = { path = "../e2e" }
vm         = { path = "../vm" }
evm-types  = { path = "../evm-types" }
stark       = { path = "../stark" }
revm       = { workspace = true }
criterion  = { version = "0.5", features = ["html_reports"] }
rayon      = { version = "1.11.0" }
mimalloc   = { version = "0.1", default-features = false, features = ["extended"] }
libmimalloc-sys = { version = "0.1" }
bincode.workspace = true
