[package]
name = "recursive"
version = "0.1.0"
edition = "2024"

[dependencies]
field      = { path = "../field" }
poly       = { path = "../poly" }
sumcheck   = { path = "../sumcheck" }
shard      = { path = "../shard" }
transcript = { path = "../transcript" }
gpu        = { path = "../gpu" }
thiserror  = { workspace = true }
