[package]
name = "shard"
version = "0.1.0"
edition = "2024"

[dependencies]
field      = { path = "../field" }
poly       = { path = "../poly" }
sumcheck   = { path = "../sumcheck" }
transcript = { path = "../transcript" }
blake3     = { workspace = true }
rayon      = "1"
thiserror  = { workspace = true }
bincode    = { workspace = true }
